--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-ml-6">
-            <p class="opentext">Brandschutz &amp; <br>Abchtungssystem</p>
+            <p class="opentext">Brandschutz &amp; <br>Abdichtungssystem</p>
           </div>
           <div class="col-md-6">
               <img src="img/right.png" class="rounded float-right" alt="...">
