--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   </nav>
       </section>
       <section class="banner">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row">
             <div class="col-ml-6">
             <p class="opentext">Brandschutz &amp; <br>Abdichtungssystem</p>
