--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
       <section class="header">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light ">
                     <a class="navbar-brand" href="#"><h3 class="navbartitle">Premium GmbH </h3></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                     </div>
                   </nav>
       </section>
-      <section class="banner">
+      <section class="banner clearfix">
         <div class="container">
           <div class="row">
             <div class="col-ml-6">
@@ -37,6 +37,13 @@
             <p class="descriptiontext">Wir sind spezialisiert auf Brandschutz</p>
           </div>
           </div>
+        </div>
+      </section>
+      <section class="aboutus">
+        <div class="container">
+          <header class="section-header">
+            <h3>Uber Uns</h3>
+          </header>
         </div>
       </section>
 
