--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="og:street-address" content="Welhermattestrasse 7"/>
+    <meta name="og:region" content="Mumliswil"/> 
+    <meta name="og:postal-code" content="4717"/>
+    <meta name="og:country-name" content="Switzerland"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -43,6 +47,7 @@
         <div class="container">
           <header class="section-header">
             <h3>Uber Uns</h3>
+            <p>Wird sind die letze ubertraumen ins userem land aber das ist nicht gut.Weil die boss von diese ubernahemnt ist schfule</p>
           </header>
         </div>
       </section>
